[FIX] web : background layout cropped on download
Steps to reproduce:

	1. Install sale_management
	2. Go into settings and click 'configure document layout'
	3. add a square custom background, for example the odoo logo
	4. Download the preview pdf, the background is cropped on the top

Issue:

	The preview and the downloaded pdf are not the same in terms of background

Cause:

	CSS styling

Solution:

	Using the background-size: contain rather than cover prevent the cropping.

opw-2901598

--- a/addons/web/static/src/legacy/scss/layout_background.scss
+++ b/addons/web/static/src/legacy/scss/layout_background.scss
@@ -32,7 +32,7 @@
     }
 }
 .o_layout_background {
-    background-size: cover;
+    background-size: contain;
     background-position: bottom center;
     background-repeat: no-repeat;
     min-height: 620px
